--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,7 +4,9 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+build_platform:
+  osx_arm64: osx_64
 provider:
-  osx_arm64: default
+#   osx_arm64: default
   linux_aarch64: default
   linux_ppc64le: default
