--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,8 @@ requirements:
 test:
   source_files:
     - examples
-  commands:                                 # [not arm64]
-    - tclsh examples/logger/logtofile.tcl   # [not arm64]
+  commands:
+    - tclsh examples/logger/logtofile.tcl
 
 about:
   home: https://core.tcl-lang.org/tcllib/doc/trunk/embedded/index.md
