--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,6 +6,7 @@ conda_build:
   pkg_format: '2'
 build_platform:
   osx_arm64: osx_64
+test: native_and_emulated
 provider:
 #   osx_arm64: default
   linux_aarch64: default
